--- a/styles/folio.css
+++ b/styles/folio.css
@@ -3,6 +3,10 @@
     flex-direction: row;
     background-color: gray;
 }
+.log{
+    background-color: black;
+
+}
 .information:hover{
     color: gray;
 }
@@ -23,22 +27,7 @@
     padding-top: 20px;
 justify-content: center;
 }
-#login{
-    width: fit-content;
-    height: fit-content;
-    background-color:lightgray;
-    color: black;
-    border:none;
-    /* border-color: black; */
-    /* border-radius: 3px,3px,3px,3px; */
-    margin-left: auto;
-padding-left: 5px;
-padding-bottom: 5px;
-font-size: larger;
-}
-#login:hover{
-    color: coral;
-}
+
 #pic{
     width: 300px;
     height: 300px;
