--- a/html/beaut.css
+++ b/html/beaut.css
@@ -6,6 +6,13 @@ display: flex;
 flex-direction: row;
 background-color: gray;
 }
+#img1{
+    padding-left: 200px;
+
+}
+#identity:hover{
+color: lightgray;
+}
 .home:hover{
     color: lightyellow;
 }
@@ -23,11 +30,12 @@ background-color: gray;
 }
 .log{
     padding-top: 30px;
-    padding-left: 1000px;
+    padding-left: 40px;
     width: fit-content;
     height: fit-content;
     border: none;
     background-color:gray;
+    font-size:16px;
 }
 .log:hover{
     color: coral;
@@ -57,7 +65,7 @@ background-color: gray;
     display: flex;
     flex-direction: row;
 }
-.web{
+#web{
     margin-left:7%;
     width: 600px;
     height: 500px;
