--- a/html/practice.csss.css
+++ b/html/practice.csss.css
@@ -1,6 +1,19 @@
 .avatar{
     width: 250px;
 }
-.card{
- border: 1px dotted blue;   
+.cards{
+    margin-left: auto;
+    margin-right: auto;
+ padding: 20px; 
+ display: flex;
+ width:700px;
+ justify-content:space-around;
+ text-align: center;
+ background: #ddebf8;
+ border-bottom:6px solid #d8cefe;
+}
+.utility{
+    border: 1px dotted blue;
+    justify-content: space-around; 
+    
 }
