--- a/html/practice.csss.css
+++ b/html/practice.csss.css
@@ -1,9 +1,8 @@
-.avatar{
+/* .avatar{
     width: 250px;
 }
 .cards{
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
  padding: 20px; 
  display: flex;
  width:700px;
@@ -16,4 +15,9 @@
     border: 1px dotted blue;
     justify-content: space-around; 
     
-}
+} */
+ body{
+    color: white;
+    background-image: url(/images/0005.jpg);
+    background-size: cover;
+ }
