--- a/html/practice.csss.css
+++ b/html/practice.csss.css
@@ -1,4 +1,4 @@
-/* .avatar{
+/* /* .avatar{
     width: 250px;
 }
 .cards{
@@ -16,12 +16,7 @@
     justify-content: space-around; 
     
 } */
-body{
-    color:#82a5ca;
-    margin: none;
-    text-align: center;
- }
- #hero{
+ /* #hero{
     background-image: url(/images/0005.jpg);
     background-size: cover;
     text-align: center;
@@ -42,4 +37,61 @@ body{
  }
  .test{
     text-shadow: 3px 0px black;
+ } */ 
+
+
+
+body{
+   text-align: center;
+   background: linear-gradient(blue pink);
+   color: white;
+   
+   
+ }
+ h1, h2, h4, p{
+   text-shadow: 0px 0px 1px black;
+ }
+#bday-age{
+   background:#efb0c9 ;
+   padding:5px 10px;
+   margin-top: 15px;
+   border-radius: 5px;
+
+ }
+ #bday-date{
+   background:#efb0c9;
+   padding: 5px 10px;
+   margin-top: 10px;
+   border-radius: 6px;
+ }
+ #bff{
+   width: 150px;
+   border-radius: 50%;
+   border: 6px solid #efb0c9;
+ }
+ #header{
+   display: flex;
+   flex-direction: column;
+ align-items:center ;
+ }
+ .gift-section{
+   margin-top: 50px;
+ }
+ .gift-title{
+   margin-bottom: 10px;
+ }
+ .gift-hint{
+   margin-bottom: 10px;
+ }
+ .gift-img{
+   width: 400px;
+   height: 400px;
+   margin: 0 auto;
+   border: 6px solid white;
+   border-radius: 10px;
+   background-image: url(/images/005.png);
+   background-size: cover;
+ }
+ .gift-img:hover{
+   background-image: url(/images/007.png);
  }
