--- a/html/practice.csss.css
+++ b/html/practice.csss.css
@@ -16,7 +16,7 @@
     justify-content: space-around; 
     
 } */
- /* #hero{
+/* #hero{
     background-image: url(/images/0005.jpg);
     background-size: cover;
     text-align: center;
@@ -37,18 +37,14 @@
  }
  .test{
     text-shadow: 3px 0px black;
- } */ 
+ } */
 
-
-
-body{
-   text-align: center;
-   background: linear-gradient(blue pink);
-   color: white;
-   
-   
- }
- h1, h2, h4, p{
+body {
+  text-align: center;
+  background: linear-gradient(blue pink);
+  color: black;
+}
+/* h1, h2, h4, p{
    text-shadow: 0px 0px 1px black;
  }
 #bday-age{
@@ -94,4 +90,5 @@ body{
  }
  .gift-img:hover{
    background-image: url(/images/007.png);
- }
+ } */
+  
