--- a/html/practice.csss.css
+++ b/html/practice.csss.css
@@ -40,10 +40,40 @@
  } */
 
 body {
-  text-align: center;
-  background: linear-gradient(blue pink);
-  color: black;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+background-color: green;
+text-align: center;
 }
+
+h1 {
+  color: goldenrod;
+  text-align: center;
+}
+
+#message-el {
+font-style: italic;
+}
+
+#texts {
+text-align: center;
+}
+
+button{
+   color: #016f32;
+width: 150px;
+background: goldenrod;
+padding-top: 5px;
+padding-bottom: 5px;
+font-weight: bold;
+border: none;
+border-radius: 2px;
+}
+
+
+
+
+
+
 /* h1, h2, h4, p{
    text-shadow: 0px 0px 1px black;
  }
