--- a/html/practice.csss.css
+++ b/html/practice.csss.css
@@ -1,3 +1,9 @@
+/* background: linearGradient(45deg 
+rgba(2, 2, 2,0.75),
+rgba(245,255, 255, 0.75)),
+url(/your image) */
+
+
 /* /* .avatar{
     width: 250px;
 }
