--- a/html/practice.csss.css
+++ b/html/practice.csss.css
@@ -19,8 +19,20 @@ body {
   border: none;
 }
 
+ul {
+  margin-top: 20px;
+  list-style: none;
+  padding-left: 0;
+}
 
+li {
+  margin-top: 5px;
+}
 
+li a {
+color: #5f9341;
+/* styling a particular element */
+}
 
 
 
