--- a/html/practice.csss.css
+++ b/html/practice.csss.css
@@ -1,8 +1,60 @@
 body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+background-color: green;
+text-align: center;
+}
+
+h1 {
+  color: goldenrod;
+  text-align: center;
+}
+
+#message-el {
+font-style: italic;
+}
+
+#texts {
+text-align: center;
+}
+
+button{
+   color: #016f32;
+width: 150px;
+background: goldenrod;
+padding-top: 5px;
+padding-bottom: 5px;
+font-weight: bold;
+border: none;
+border-radius: 2px;
+}
+
+
+
+
+
+
+
+
+
+
+/* body {
   margin: 0;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #input-el {
   width: 100%;
@@ -30,9 +82,9 @@ li {
 }
 
 li a {
-color: #5f9341;
+color: #5f9341; */
 /* styling a particular element */
-}
+/* } */
 
 
 
@@ -97,35 +149,6 @@ url(/your image) */
 
 /*FOR THE BLACKJACK GAME
 
-/* body {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-background-color: green;
-text-align: center;
-}
-
-h1 {
-  color: goldenrod;
-  text-align: center;
-}
-
-#message-el {
-font-style: italic;
-}
-
-#texts {
-text-align: center;
-}
-
-button{
-   color: #016f32;
-width: 150px;
-background: goldenrod;
-padding-top: 5px;
-padding-bottom: 5px;
-font-weight: bold;
-border: none;
-border-radius: 2px;
-} */
 
 /* h1, h2, h4, p{
    text-shadow: 0px 0px 1px black;
