--- a/html/DOM.css
+++ b/html/DOM.css
@@ -1,4 +1,110 @@
-*{
+body {
+    background: url(0002.jpg) no-repeat center center;
+    height: 100vh;
+    position: relative;
+
+}
+
+#open-btn {
+    position: absolute;
+    top: 70%;
+    left: 10%;
+    width: 350px;
+    height: 80px;
+    font-size: 2rem;
+    background: transparent;
+    color: white;
+    border: solid 2px white;
+    border-radius: 10px;
+    padding: 5px;
+    box-shadow: 0 0 3px black;
+    transition: .5s;
+}
+
+#open-btn:hover {
+    background-color: white;
+    color: black;
+}
+
+#modal {
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 100px;
+    padding:10px 20px;
+    border-radius: 5px;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    animation-name: animatemodal;
+    animation-duration: .4s;
+}
+
+#close-btn {
+    font-size: 3rem;
+}
+
+#close-btn:hover {
+    color: red;
+}
+
+#modal-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -63,4 +169,4 @@ body {
 
 .button-area button:active {
     background-color: lightblue;
-}
+} */
