--- a/html/DOM.css
+++ b/html/DOM.css
@@ -1,4 +1,75 @@
 body {
+    background: url(AI.jpg) no-repeat center center/cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.accordian {
+     width: 65%;
+     background-color: white;
+     padding: 30px;
+     border-radius: 30px;
+}
+
+.accordian .accordian-title {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.accordian .content-container .question {
+    padding: 18px 0px;
+    font-size: 22px;
+    cursor: pointer;
+    border-bottom: 1px solid black;
+
+    position: relative;
+}
+
+.accordian .content-container .question::after {
+    content: '+';
+
+    position: absolute;
+    right: -5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* CSS FOR MODAL */
+/* body {
     background: url(0002.jpg) no-repeat center center;
     height: 100vh;
     position: relative;
@@ -62,11 +133,12 @@ body {
     height: 100%;
     z-index: 1;
     background-color: rgba(0,0,0, .4);
-}
+} */
 
 /* TO CREATE ANIMATIONS */
 
-@keyframes animatemodal {
+/* CSS FOR QUOTE GENERATOR */
+/* @keyframes animatemodal {
     from {
         top: -300px;
         opacity: 0;
@@ -76,34 +148,7 @@ body {
         top: 50%;
         opacity: 1;
     }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+} */
 
 
 
