--- a/html/DOM.css
+++ b/html/DOM.css
@@ -1,4 +1,103 @@
+
 body {
+    height: 100vh;
+    background: url(/images/0003.jpg)no-repeat center center/cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    width: 60%;
+    height: 250px;
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 0 3px;
+}
+
+.timer {
+    width: 100%;
+    font-size: 72px;
+    text-align: center;
+    margin: 0px auto;
+    padding: 35px;
+}
+
+.buttons {
+    text-align: center;
+}
+
+button {
+    margin: 0 10px;
+    border: none;
+}
+
+button i {
+    font-size: 2rem;
+    padding: 10px;
+    color: #fff;
+}
+
+#play {
+    background-color: green;
+}
+
+#pause {
+    background-color: orange;
+}
+
+#reset {
+    background-color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* CSS FOR ACCORDION */
+/* body {
     background: url(AI.jpg) no-repeat center center/cover;
     height: 100vh;
     display: flex;
@@ -43,10 +142,10 @@ body {
     height: 0px;
     overflow: hidden;
     transition: .5s;
-}
+} */
 
-/* JAVASCRIPT STYLING */
- .accordion .content-container.active .answer {
+/* JAVASCRIPT STYLING FOR ACCORDION*/
+ /* .accordion .content-container.active .answer {
     height: 150px;
  }
 
@@ -59,37 +158,7 @@ body {
     content: '-';
     font-size: 30px;
     transition: .5s;
- }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ } */
 
 /* CSS FOR MODAL */
 /* body {
