--- a/html/DOM.css
+++ b/html/DOM.css
@@ -1,5 +1,53 @@
 
-body {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* CSS FOR TIMER */
+
+/* body {
     height: 100vh;
     background: url(/images/0003.jpg)no-repeat center center/cover;
     display: flex;
@@ -48,53 +96,7 @@ button i {
 
 #reset {
     background-color: red;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+} */
 
 /* CSS FOR ACCORDION */
 /* body {
