--- a/html/DOM.css
+++ b/html/DOM.css
@@ -1,5 +1,43 @@
+body {
+    height: 100vh;
+    background: url(START.jpg) no-repeat center center/cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+#add-task-container{
+    width: 350px;
+    padding: 20px 10px;
+    background: white;
+    border-radius: 20px;
+    box-shadow: 0 0 3px;
+    display: flex;
+}
 
+input {
+    flex: 5;
+    margin-right: 10px;
+    border-radius: 20px;
+    font-size: 1.2rem;
+    padding: 5px;
+}
+
+#add-task {
+    font-size: 1.2rem;
+    padding: 5px;
+    flex: 1;
+    transition: .3s;
+    background-color: white;
+    color: green;
+    border: green solid 2px;
+    border-radius: 10px;
+}
+
+#add-task:hover {
+    background-color: green;
+    color: white;
+}
 
 
 
