--- a/html/pomodoro.css
+++ b/html/pomodoro.css
@@ -1,28 +1,37 @@
-#break-length{
-    text-align: center;
-    margin: 0%, auto;
+body {
+    height: 100vh;
+    display: block;
+
 }
 
 .breaks{
-    display: flex;
+    display: block;
     justify-content: center;
     text-align: center;
-    margin: 0%, auto;
-}
-
-#number-between{
-    margin-left:25px;
-    margin-right: 25px;
+    margin-top: 20px;
 }
 
 #break-{
-    padding:10px 15px;
-    border: 2px gray solid;
+    margin: 10px 10px;
+    padding: 20px 20px;
+    font-size: 1.1rem;
+    border-radius: 10px;
+    box-shadow:0 0 1px black ;
 }
 
 #break-plus{
-    padding:10px 15px;
-    border: 2px gray solid;
+    margin: 10px 10px;
+    padding: 20px 20px;
+    font-size: 1.1rem;
+    border-radius: 10px;
+    box-shadow:0 0 1px black ;
+}
+
+.break-numbers{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
 }
 
 #session-minus{
