--- a/html/project.css
+++ b/html/project.css
@@ -1,13 +1,14 @@
-.body{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     height: 100vh;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
-.login-page{
-    background: #F0FFFF;
-    display: block;
-    width: fit-content;
-}
-h1{
-    font-size: 1.2rem;   
-}
+
+
