--- a/html/project.css
+++ b/html/project.css
@@ -9,16 +9,30 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('START.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: white;
 }
 
 h1{
-    margin: 30px;
+    font-size: 16px;
 }
 
-.texts{
-    display: block;
+.login-page {
+    display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.texts {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 8px;
+    padding: 2rem;
+    width: 300px;
+    box-shadow: 0 0 10px rgba(red, green, blue, 0.2);
+    position: relative;
 }
 
 .inputs {
