--- a/html/project.css
+++ b/html/project.css
@@ -41,7 +41,7 @@ h1{
     margin: 20px;
 }
 
-#Username {
+#username {
     border-radius: 5px;
     padding: 15px 10px;
     border: 1px solid black;
@@ -53,7 +53,7 @@ h1{
     margin-bottom: 10px;
 }
 
-#Username:hover {
+#username:hover {
     background-color: black;
     color: white;
 }
