--- a/html/project.css
+++ b/html/project.css
@@ -26,7 +26,7 @@ h1{
     height: 100%;
 }
 
-.texts {
+#main-div {
     background: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     padding: 30px;
