--- a/html/stopwatch.css
+++ b/html/stopwatch.css
@@ -2,7 +2,7 @@ body{
     background-color: #edeaff;
 }
 
-.stopwatch{
+.stopwatch{   
     width: 90%;
     max-width: 600px;
     background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(0003.jpg);
@@ -13,4 +13,25 @@ body{
     color: #fff;
     margin: 200px auto 0;
     box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+} 
+.stopwatch h1{
+    margin-top: 60px;
+    padding: 20px 20px;
+    font-size: 64px;
+    font-weight: 300;
 }
+.buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.button img{
+    width: 50px;
+    margin: 0 20px;
+    cursor: pointer;
+
+}
+.button img:nth-child(2){
+    width: 80px;
+} 
+
