--- a/html/ToDo.css
+++ b/html/ToDo.css
@@ -51,3 +51,18 @@ button{
     cursor: pointer;
     border-radius: 40px;
 }
+ul li{
+    list-style: none;
+    font-size: 17px ;
+    padding: 12px 8px 12px 50px;
+    user-select: none;
+    cursor: pointer;
+}
+ul li.checked{
+    color: #555;
+    text-decoration: line-through;
+}
+#alert-info{
+    color:red;
+
+}
