--- a/html/ToDo.css
+++ b/html/ToDo.css
@@ -66,3 +66,18 @@ ul li.checked{
     color:red;
 
 }
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50px;
+}
+ul li span:hover{
+    background: #edeef0;
+}
