--- a/html/pomodoro.css
+++ b/html/pomodoro.css
@@ -3,7 +3,7 @@
     
 }
 .main-body{
-     background-color: rgb(186, 73, 73);
+     background-color: #ba4949;
     display: flex;
     align-items: center;
     justify-content: center;
