--- a/html/practice.csss.css
+++ b/html/practice.csss.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
@@ -28,7 +28,7 @@ body {
   margin: 5rem 2rem;
   border: none;
   background-color: #fff;
-  color: #444;
+  color: rgb(133, 125, 125);
   border-radius: 10rem;
   cursor: pointer;
 }
@@ -44,6 +44,11 @@ body {
   background: none;
 }
 
+.close-modal:hover{
+  border-radius: 50px;
+  background-color: #857d7d;
+}
+
 h1 {
   font-size: 2.5rem;
   margin-bottom: 2rem;
@@ -51,11 +56,11 @@ h1 {
 
 p {
   font-size: 1.8rem;
-}
+} */
 
 /* -------------------------- */
 /* CLASSES TO MAKE MODAL WORK */
-.hidden {
+/* .hidden {
   display: none;
 }
 
@@ -83,7 +88,7 @@ p {
   backdrop-filter: blur(3px);
   z-index: 5;
 }
-
+ */
 
 
 
