--- a/html/pomodoro.css
+++ b/html/pomodoro.css
@@ -1,79 +1,107 @@
- body {
-    height: 100vh;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+body {
+  background-color: rgb(186, 73, 73);
+  height: 100vh;
+}
+.heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+.pomo {
+  margin-right: 10%;
+  font-weight: 1500px;
+  font-size: 30px;
+  font-family:"ArialRounded", "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+;
+}
+.top-options {
+  justify-content: space-between;
+}
+.button-0,
+.button-1,
+.button-2,
+.button-3 {
+  padding: 8px 12px;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.2);
+  opacity: 0.9;
+  color: white;
+  cursor: pointer;
+  font-size: 15px;
+  justify-content: center;
+  margin-left: 10px;
+  border-color: rgba(255, 255, 255, 0.2);
+}
+.main-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10%;
+  
+}
+.timer-action {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+}
+.breaks {
+  margin-right: 20px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.longest-break,
+.short-timer,
+.long-break {
+  padding: 8px 12px;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.2);
+  opacity: 0.9;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+  justify-content: center;
+  margin-left: 10px;
+  border-color: rgba(255, 255, 255, 0.2);
+  border: none;
+}
+.fixer{
+    display: block;
+    text-align: center;
+}
+#start-number {
+  display: block;
+  text-align: center;
+  color: white;
+  font-size: 120px;
+  font-weight: bold;
+  margin-top: 20px;
+  font-family: "ArialRounded", "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+.kick-off {
+      cursor: pointer;
+    border: none;
+    margin-bottom: 40px;
+    margin-top: 30px;
+    padding: 0px 12px;
+    border-radius: 4px;
+    box-shadow: rgb(235, 235, 235) 0px 6px 0px;
+    font-family: ArialRounded;
+    font-size: 22px;
+    height: 55px;
+    color: rgb(186, 73, 73);
+    font-weight: bold;
+    width: 200px;
+    background-color: white;
     
 }
-.main-body{
-     background-color: #ba4949;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px auto;
-
-}
-
-
-.breaks, .sessions{
-    display: block;
-    justify-content: center;
-    text-align: center;
-    margin-top: 20px;
-}
-
-#break-minus{
-    margin: 10px 10px;
-    padding: 10px 10px;
-    font-size: 1.1rem;
-    border-radius: 10px;
-    box-shadow:0 0 1px black ;
-    transition: .3s;
-}
-
-#break-minus:hover{
-    background:black;
-    color: white;
-}
-
-#break-plus{
-    margin: 10px 10px;
-    padding: 10px 10px;
-    font-size: 1.1rem;
-    border-radius: 10px;
-    box-shadow:0 0 1px black ;
-    transition: .3s;
-}
-
-#break-plus:hover{
-    background:black;
-    color: white;
-}
-
-.break-numbers, .session-numbers{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-}
-
-#session-minus, #session-plus{
-    margin: 10px 10px;
-    padding: 10px 10px;
-    font-size: 1.1rem;
-    border-radius: 10px;
-    box-shadow:0 0 1px black ;
-    transition: .3s;
-}
-
-#session-minus:hover{
-    background: black;
-    color: white;
-}
-
-#session-plus:hover{
-    background: black;
-    color: white;
-}
-
-#session-length{
-    text-align: center;
-}
-
