--- a/html/pomodoro.css
+++ b/html/pomodoro.css
@@ -16,6 +16,9 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px rgba(14, 13, 13, 0.2) solid;
+  
 }
 .pomo {
   margin-right: 10%;
@@ -43,6 +46,13 @@ body {
   margin-left: 10px;
   border-color: rgba(255, 255, 255, 0.2);
 }
+.button-0:hover,
+.button-1:hover,
+.button-2:hover,
+.button-3:hover{
+     background-color: rgba(134, 130, 130, 0.2);
+    transition: 0.5s;
+} 
 .main-body {
   display: flex;
   align-items: center;
@@ -73,6 +83,12 @@ body {
   margin-left: 10px;
   border-color: rgba(255, 255, 255, 0.2);
   border: none;
+}
+.longest-break:hover,
+.short-timer:hover,
+.long-break:hover{
+    background-color: rgba(134, 130, 130, 0.2);
+    transition: 0.5s;
 }
 .fixer{
     display: block;
