--- a/Password work/pasword.css
+++ b/Password work/pasword.css
@@ -38,6 +38,7 @@ body{
     width: 50px;
     cursor: pointer;
 }
+
 .display input{
     border: 0;
     outline: 0;
@@ -47,7 +48,7 @@ body{
     width: 28px;
     margin-right: 10px;
 }
-.container button {
+#generate {
     border: 0;
     outline: 0;
     background: #019f55;
@@ -60,4 +61,9 @@ body{
     padding: 16px 26px;
     border-radius: 5px;
     cursor: pointer;
+}
+#generate:hover{
+    background-color: rgba(3, 131, 3, 0.5); 
+  backdrop-filter: blur(5px);
+  transition: .5s;
 }
