--- a/Password work/pasword.css
+++ b/Password work/pasword.css
@@ -31,14 +31,21 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 26px 20px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+    padding-left: 20px;
+    padding-right: 2px;
     border-radius: 5px;
 }
-.display img{
-    width: 50px;
+#copy-img{
+    padding-right: 10px;
+    width: 40px;
     cursor: pointer;
 }
-
+#invincible{
+    width: 80px;
+    cursor: pointer;
+}
 .display input{
     border: 0;
     outline: 0;
