--- a/Calculator/calculator.css
+++ b/Calculator/calculator.css
@@ -37,6 +37,10 @@
     transition: .3s;
 }
 #display-menu{
-    width: 250px;
+    text-align: right;
+    width: 350px;
     margin-bottom: 10px;
+}
+#equal{
+    width: 150px;
 }
