--- a/type tester/typer.css
+++ b/type tester/typer.css
@@ -35,6 +35,7 @@ body{
     line-height: 25px;
     padding: 20px;
     border-radius: 10px;
+    text-align: center;
 }
 .display{
     display: flex;
@@ -42,12 +43,14 @@ body{
     justify-content: center;
     text-align: left;
     vertical-align: top;
-}
-#typeArea{
-    padding: 70px 200px;
     border-radius: 10px;
     border: 10px solid gray;
-    
+    margin: 50px 400px;
+}
+#typeArea{
+    border: none;
+    padding: 30px 70px;
+    text-align: left;
 }
 .timer-start{
     display: flex;
