--- a/type tester/typer.css
+++ b/type tester/typer.css
@@ -1,8 +1,28 @@
-/*--------------------------------------------------------------
+/* /*--------------------------------------------------------------
 Typography
 --------------------------------------------------------------*/
 
-body,
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* body,
 button,
 input,
 select,
@@ -99,12 +119,12 @@ small {
 
 big {
 	font-size: 125%;
-}
+} */
 
 /*--------------------------------------------------------------
 Layout
 --------------------------------------------------------------*/
-body {
+/* body {
     margin: 0;
     padding: 0;
 }
@@ -186,4 +206,4 @@ body {
 #reset:hover {
     color: white;
     background-color: #E95D0F;
-}
+} */ 
